# service-registry

./: Cargo.toml  README.md
proto/: heartbeat_proto.proto  register_proto.proto  registry_proto.proto
src/: client.rs  container.rs  lib.rs  register_proto.rs  register_proto_grpc.rs  registry.rs  registry_proto.rs  registry_proto_grpc.rs  rpc_server.rs  server.rs  test.rs
src/heartbeat/: client.rs  heartbeat_proto.rs  hub.rs  mod.rs  server.rs  test.rs  timer.rs
src/registry/: client.rs  mod.rs  server.rs
tests/: container.rs  heartbeat_hub.rs  heartbeat_server.rs  registry.rs  test_all.rs
tests/util/: mod.rs
